2000-05-31  Jens Finke <jens@triq.net>
	* configure.in: Added check for libfam.

	* acconfig.h: undef HAVE_LIBFAM.

	* src/apotheke-cvs-entries.[ch]: New files.

	* src/Makefile.am (apotheke_view_SOURCES): Added
	apotheke-cvs-entries.[ch].
	(apotheke_view_LADD): Added fam libs.

	* apotheke-directory.c (apotheke_directory_dispose): New function.
	(apotheke_directory_instance_init): Init monitor attribute.
	(apotheke_directory_class_init): Link dispose function.
	(monitor_callback): New function.
	(apotheke_directory_create_inital_file_list): Add monitor if fam
	is available.
	(apotheke_directory_apply_cvs_status): Rewrote this method and
	moved lot of functionality to apotheke-cvs-entries.c
	(apply_cvs_status_callback): New function.

	* apotheke-view.c (construct_ui): Add etched in shadow around text
	view.

--- a/apotheke/configure.in
+++ b/apotheke/configure.in
@@ -20,6 +20,18 @@ PKG_CHECK_MODULES(APOTHEKE, glib-2.0 gdk-pixbuf-2.0 gnome-vfs-2.0 gtk+-2.0 libna
 AC_SUBST(APOTHEKE_CFLAGS)
 AC_SUBST(APOTHEKE_LIBS)
 
+dnl FAM
+
+FAM_MISSING_WARNING="Apotheke depends on FAM to provide notification when files are altered (either through filesystem polling, or a kernel notification mechanism). If Apotheke is built without FAM support, directories viewed with Apotheke will not remain in synch with the actual filesystem when they are altered by external processes. FAM is available from http://oss.sgi.com/projects/fam/. A patch to add Linux Kernel 2.4 directory notify support to FAM (highly desirable) is available from http://people.redhat.com/alexl/files/" 
+FAM_LIBS=
+AC_CHECK_LIB(fam, FAMOpen,
+  [AC_CHECK_HEADERS(fam.h,
+    [AC_DEFINE(HAVE_LIBFAM)
+     FAM_LIBS="-lfam"],
+    AC_MSG_WARN(*** FAM support will not be built (header files not found) $FAM_MISSING_WARNING ***))],
+  AC_MSG_WARN(*** FAM support will not be built (FAM library not found) $FAM_MISSING_WARNING ***))
+AC_SUBST(FAM_LIBS)
+
 dnl *******************************
 dnl Internationalization
 dnl ******************************* 
