--- a/apotheke/configure.in
+++ b/apotheke/configure.in
@@ -16,12 +16,32 @@ GNOME_COMPLIE_WARNINGS
 dnl ******************************
 dnl pkg-config checks
 dnl ******************************
-PKG_CHECK_MODULES(APOTHEKE, glib-2.0 gdk-pixbuf-2.0 gnome-vfs-2.0 gtk+-2.0 libnautilus libgnome-2.0)
+PKG_CHECK_MODULES(APOTHEKE, glib-2.0 gdk-pixbuf-2.0 gnome-vfs-2.0 gtk+-2.0 libnautilus libgnome-2.0 gconf-2.0)
 AC_SUBST(APOTHEKE_CFLAGS)
 AC_SUBST(APOTHEKE_LIBS)
 
-dnl FAM
 
+dnl ******************************
+dnl gconf paths
+dnl ******************************
+AC_PATH_PROG(GCONFTOOL, gconftool-2)
+dnl Specify the gconf configuration source,
+dnl default to xml::$(sysconfdir)/gconf/gconf.xml.defaults
+
+GCONF_CONFIG_SOURCE=
+
+AC_ARG_ENABLE(gconf-source, [  --enable-gconf-source=sourceaddress Where to install schema files.], GCONF_CONFIG_SOURCE=$enable_gconf_source,)
+if test "x$GCONF_CONFIG_SOURCE" = "x"; then
+        GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
+fi
+
+AC_SUBST(GCONF_CONFIG_SOURCE)
+AC_SUBST(INSTALL_GCONF_CONFIG_SOURCE)
+
+
+dnl ******************************
+dnl libfam check
+dnl ******************************
 FAM_MISSING_WARNING="Apotheke depends on FAM to provide notification when files are altered (either through filesystem polling, or a kernel notification mechanism). If Apotheke is built without FAM support, directories viewed with Apotheke will not remain in synch with the actual filesystem when they are altered by external processes. FAM is available from http://oss.sgi.com/projects/fam/. A patch to add Linux Kernel 2.4 directory notify support to FAM (highly desirable) is available from http://people.redhat.com/alexl/files/" 
 FAM_LIBS=
 AC_CHECK_LIB(fam, FAMOpen,
@@ -31,6 +51,7 @@ AC_CHECK_LIB(fam, FAMOpen,
     AC_MSG_WARN(*** FAM support will not be built (header files not found) $FAM_MISSING_WARNING ***))],
   AC_MSG_WARN(*** FAM support will not be built (FAM library not found) $FAM_MISSING_WARNING ***))
 AC_SUBST(FAM_LIBS)
+
 
 dnl *******************************
 dnl Internationalization
@@ -43,6 +64,9 @@ dnl Add the languages which your application supports here.
 ALL_LINGUAS="de"
 AM_GLIB_GNU_GETTEXT
 
+dnl *******************************
+dnl Output
+dnl ******************************* 
 AC_OUTPUT([
 Makefile
 src/Makefile
