2002-06-10  Jens Finke <jens@triq.net>
	* apotheke-cvs-dialogs.[ch],
	* apotheke.glade,
	* apotheke-glade.h: New files.

	* apotheke.schemas: Added keys for diff options, changed most
	settings to bool type.

	* configure.in: Added check for libglade.

	* src/Makefile.am: Added glade stuff and new files.

	* src/apotheke-client-cvs.c (assemble_diff_cmd): Handle -b option.

	* src/apotheke-main.c: Don't initialize gconf here.

	* src/apotheke-options.h: Use ApothekeOptions as "base struct" for
	the other ones.

	* src/apotheke-view-ui.xml.in: Display only the most important
	commands for now.

	* src/apotheke (verb_CVS_status_cb), (verb_CVS_diff_cb): Use new
	APOTHEKE_OPTIONS macro.
	(verb_CVS_diff_cb): Show options dialog.
	(call_paned_set_position): New function.
	(construct_ui): Add idle function for placing the gutter (doesn't
	work either).
	(apotheke_view_instance_init): Initialize gconf if neccessary.

--- a/apotheke/src/Makefile.am
+++ b/apotheke/src/Makefile.am
@@ -1,6 +1,7 @@
 
 INCLUDES =                         \
 	-DDATADIR=\""$(datadir)"\" \
+	-DGLADE_DIR=\"$(gladedir)\" \
 	-DGNOMELOCALEDIR=\""$(datadir)/locale\"" \
 	$(APOTHEKE_CFLAGS)
 
@@ -19,13 +20,19 @@ apotheke_view_SOURCES =        \
 	apotheke-highlight-buffer.h \
 	apotheke-cvs-entries.c \
 	apotheke-cvs-entries.h \
-	apotheke-options.h
+	apotheke-cvs-dialogs.h \
+	apotheke-cvs-dialogs.c \
+	apotheke-options.h     \
+	apotheke-glade.h
 
 apotheke_view_LDADD = $(APOTHEKE_LIBS) $(FAM_LIBS)
 
 serverdir = $(libdir)/bonobo/servers
 server_in_files = Apotheke_View.server.in
 server_DATA = $(server_in_files:.server.in=.server)
+
+gladedir   = $(pkgdatadir)/glade
+glade_DATA = apotheke.glade
 
 @INTLTOOL_SERVER_RULE@
 
