2002-11-07  Jens Finke <jens@triq.net>
	* apotheke.spec.in: Added spec file, created by Christian Schaller
	<Christian@linuxpower.org>.

	* configure.in: Added apotheke.spec to output files.

	* Makefile.am: Added spec file to EXTRA_DIST.

--- a/apotheke/Makefile.am
+++ b/apotheke/Makefile.am
@@ -4,7 +4,9 @@ EXTRA_DIST =  \
 	$(schema_DATA) \
         intltool-extract.in \
         intltool-merge.in   \
-        intltool-update.in
+        intltool-update.in  \
+	apotheke.spec.in    \
+	apotheke.spec
 
 schemadir = $(sysconfdir)/gconf/schemas
 schema_DATA = apotheke.schemas
