2002-11-14  Ross Burton  <ross@burtonini.com>
	* src/Makefile.am: Install the binary in ${libexecdir}, instead of
	${bindir}; and replace the path in the .server file. Also add some
	more clean rules.

	* configure.in: Fix the typo with GNOME_COMPILE_WARNINGS, so that
	it actually works. Use the GConf macros instead of doing it all by
	hand. Also turn on AM_MAINTAINER_MODE.

--- a/apotheke/Makefile.am
+++ b/apotheke/Makefile.am
@@ -2,14 +2,19 @@ SUBDIRS = src icons po
 
 EXTRA_DIST =  \
 	$(schema_DATA) \
-        intltool-extract.in \
-        intltool-merge.in   \
-        intltool-update.in  \
-	apotheke.spec.in    \
+	intltool-extract.in \
+	intltool-merge.in \
+	intltool-update.in \
+	apotheke.spec.in \
 	apotheke.spec
 
-schemadir = $(sysconfdir)/gconf/schemas
+schemadir = $(GCONF_SCHEMA_FILE_DIR)
 schema_DATA = apotheke.schemas
 
 install-data-local:
-	GCONF_CONFIG_SOURCE=$(GCONF_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(top_srcdir)/apotheke.schemas
+	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(top_srcdir)/apotheke.schemas
+
+CLEANFILES = \
+	intltool-extract \
+	intltool-merge \
+	intltool-update
