--- a/apotheke/configure.in
+++ b/apotheke/configure.in
@@ -16,7 +16,7 @@ AC_HEADER_STDC
 dnl ******************************
 dnl pkg-config checks
 dnl ******************************
-PKG_CHECK_MODULES(APOTHEKE, glib-2.0 gdk-pixbuf-2.0 gnome-vfs-2.0 gtk+-2.0 libnautilus libgnome-2.0 gconf-2.0 libglade-2.0)
+PKG_CHECK_MODULES(APOTHEKE, glib-2.0 gdk-pixbuf-2.0 gnome-vfs-2.0 gtk+-2.0 libnautilus >= 2.2.1 libgnome-2.0 gconf-2.0 libglade-2.0)
 AC_SUBST(APOTHEKE_CFLAGS)
 AC_SUBST(APOTHEKE_LIBS)
 
